重构了网络包的架构，现在有更统一的调用和更好的可读性